# azcoin-template-provider

./: Cargo.toml  README.md  push.ps1
config/: azcoin-template-provider.toml.example
docs/: template-provider-runbook.md
src/: config.rs  health.rs  main.rs  poller.rs  rpc.rs  template.rs  tp_server.rs  zmq_wakeup.rs
