[package]
name = "azcoin-template-provider"
version = "0.1.0"
edition = "2021"
description = "RPC adapter for azcoind block templates (SV2 Template Provider — RPC-only phase)"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
